# FlyDSL

./: .dockerignore  CMakeLists.txt  README.md  README_Iluvatar.md  build-iluvatar.sh  env.sh  minimal_iluvatar_kernel.py  minimal_iluvatar_kernel_store.py
.claude/skills/iluvatar-backend-bringup/: SKILL.md
.github/docker/: Dockerfile.iluvatar-ci
.github/runner/: .dockerignore  Dockerfile  docker-compose.yml  start.sh
.github/runners/: iluvatar-runner-setup.md
.github/workflows/: iluvatar-manual.yaml  ir-tests.yaml  publish-iluvatar-ci-image.yml
cmake/: FlyDSLBackends.cmake
cmake/backends/: iluvatar.cmake
docs/: MmaAtom_Design.html  cq_backend_status_zh.md  flydsl-copyatom-architecture.html  flydsl-dsl-to-ir-walkthrough.html  flydsl-flytorocdl-conversions.html  flydsl-ixdl-mr-async-cp-implementation-plan.html  flydsl-mmaatom-architecture.html  flydsl-training-vectoradd.html  flydsl_docs_iluvatar-flydsl-build-without-rocm.md  flydsl_ixcc_llvm22_changes.patch  iluvatar-port-guide.md  ixcc_llvm22_flydsl_dev_setup.md  ixcc_llvm22_flydsl_dev_setup_confluence.wiki  ixdl_gemm_optimization_handoff.md  ixdl_layout_inference_fpe.md
examples/: 01-vectorAdd-global.py  01-vectorAdd-ixdl.py  01-vectorAdd.py  02-tiledCopy-iluvatar-mr.py  03-tiledMma-iluvatar-mr-pipeline-hgemm.py  03-tiledMma-ixdl.py  04-tiledMma-iluvatar.py  05-gemm-ixdl-bf16.py  05-iluvatar-mr-async-copy.py  05-sme-gemm-iluvatar.py  06-dump-shared-memory-view.py  06-gemm-ixdl-bf16-composed-swizzle.py  06-gemm256-ixdl.py  06-multiblock-gemm-iluvatar.py  07-gemm-ixdl-bf16-swizzled-pipebar.py  07-iluvatar-mr-async-copy-loop.py  07-sme-multiblock-gemm-iluvatar.py  08-optimized-sme-gemm-iluvatar.py  09-matAdd-dynamic-shape.py  16-ixdl-sme-copy.py  17-ixdl-sme-copy-modes.py  18-ixdl-sme-gemm16x16x32.py  19-gemm256-ixdl-sme.py  30-flash-attn-ixdl-bf16-qk-swap.py  33-flash-attn-ixdl-bf16-transposec.py  test.py  test1.py
examples/iluvatar/: 01-vectorAdd.py  02-tiledCopy.py  100-temp-matmul-bf16-rowmajor.py  101-temp-matmul-all-swizzle-check.py  99-temp-swizzle-visual-check.py
include/flydsl-c/: FlyCQDialect.h  FlyDialect.h  FlyIXDLDialect.h
include/flydsl/Conversion/: Passes.h  Passes.td
include/flydsl/Conversion/FlyToCQ/: CMakeLists.txt  FlyToCQ.h  Passes.td
include/flydsl/Conversion/FlyToIXDL/: CMakeLists.txt  FlyToIXDL.h  Passes.td
include/flydsl/Conversion/FlyToROCDL/: Passes.td
include/flydsl/Dialect/: CMakeLists.txt
kernels/: iluvatar_mr_common.py  iluvatar_mr_epilogue.py  iluvatar_mr_hgemm.py  iluvatar_mr_operand_copy.py  iluvatar_mr_s2r.py  iluvatar_sme_gemm.py
lib/Bindings/Python/: FlyCQExtension.cpp  FlyExtension.cpp  FlyIXDLExtension.cpp
lib/CAPI/Dialect/Fly/: FlyDialect.cpp
lib/CAPI/Dialect/FlyCQ/: CMakeLists.txt  FlyCQDialect.cpp
lib/CAPI/Dialect/FlyIXDL/: CMakeLists.txt  FlyIXDLDialect.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/FlyToCQ/: CMakeLists.txt  FlyToCQ.cpp
lib/Conversion/FlyToIXDL/: CMakeLists.txt  FlyToIXDL.cpp
lib/Conversion/FlyToROCDL/: CMakeLists.txt  FlyToROCDL.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Fly/IR/: FlyAttrDefs.cpp  FlyOps.cpp  FlyTypeDefs.cpp
lib/Dialect/Fly/Transforms/: LayoutLowering.cpp  RewriteFuncSignature.cpp
lib/Dialect/Fly/Utils/: IntTupleUtils.cpp  IntUtils.cpp  NormalForm.cpp
lib/Dialect/FlyCQ/: CMakeLists.txt  Dialect.cpp
lib/Dialect/FlyCQ/CQ/: CopyAtom.cpp  MmaAtom.cpp
lib/Dialect/FlyIXDL/: CMakeLists.txt  Dialect.cpp
lib/Dialect/FlyIXDL/IX11/: CopyAtom.cpp  MmaAtom.cpp
lib/Dialect/FlyIXDL/Ivcore11/: CopyAtom.cpp  MmaAtom.cpp
lib/Dialect/FlyIXDL/MR/: CopyAtom.cpp  MmaAtom.cpp
lib/Dialect/FlyIXDL/Utils/: CpAsyncUtils.cpp
lib/Dialect/FlyROCDL/CDNA3/: MmaAtom.cpp
lib/Dialect/FlyROCDL/CDNA4/: MmaAtom.cpp
lib/Runtime/: CMakeLists.txt  FlyCorexRuntimeWrappers.cpp
lib/Runtime/Iluvatar/: CMakeLists.txt  FlyIluvatarRuntimeWrappers.cpp
python/flydsl/compiler/: jit_executor.py  jit_function.py  kernel_function.py
python/flydsl/compiler/backends/: __init__.py  iluvatar.py  ixdl.py
python/flydsl/expr/: __init__.py  cq.py  derived.py  iluvatar.py  ixdl.py  numeric.py  primitive.py  typing.py
python/flydsl/expr/flyixdl/: __init__.py  universal.py
python/flydsl/expr/iluvatar/: __init__.py  arch.py  (+2 more)
python/flydsl/runtime/: __init__.py  device.py  ixdl_device.py
python/flydsl/utils/: env.py  smem_allocator.py
python/mlir_flydsl/: CMakeLists.txt  FlyRegisterEverything.cpp
python/mlir_flydsl/dialects/: FlyCQ.td  FlyIXDL.td  fly_cq.py  fly_ixdl.py
scripts/: activate_backend.sh  build.sh  build_corex_ixpti_shim.sh  build_ixcc_llvm.sh  build_llvm.sh  corex_ixpti_shim.c  env_iluvatar.sh  run_iluvatar_device.sh  run_mlir_filecheck.sh  run_tests.sh
tests/: conftest.py
tests/kernels/: test_iluvatar_sme_gemm.py
tests/mlir/Conversion/: copy_atom_cq.mlir  gpu_ops_ixdl.mlir  ixdl_gemm.mlir  ixdl_mma_atom.mlir  ixdl_mr_async_cp.mlir  ixdl_mr_mma.mlir  mma_atom_cq.mlir  mr_async_copy_ixdl.mlir
tests/mlir/LayoutAlgebra/: mod_swizzle.mlir  swizzle_mod.mlir  swizzle_mod_crd2idx.mlir  swizzle_mod_recast.mlir
tests/mlir/Transforms/: layout_lowering.mlir  recast_composed_swizzle_lowering.mlir  swizzle_mod_lowering.mlir
tests/unit/: conftest.py  iluvatar_mr_hgemm_test_common.py  iluvatar_mr_staged_kernels.py  test_backend_cmake_defaults.py  test_compile_backends.py  test_device_runtime.py  test_iluvatar_backend_cmake.py  test_iluvatar_binary_pipeline_smoke.py  test_iluvatar_compile_backend.py  test_iluvatar_device_runtime.py  test_iluvatar_expr_import.py  test_iluvatar_jit_launch_smoke.py  test_iluvatar_jit_runtime_resolution.py  test_iluvatar_mr_async_copy.py  test_iluvatar_mr_async_cp_device.py  test_iluvatar_mr_epilogue_device.py  test_iluvatar_mr_g2s_s2r_mma_device.py  test_iluvatar_mr_hgemm_pipeline_stages.py  test_iluvatar_mr_mma_device.py  test_iluvatar_mr_mma_pipeline_device.py  test_iluvatar_mr_s2r_device.py  test_iluvatar_runtime_smoke.py  test_iluvatar_sme_gemm_ir.py  test_ixdl_mma_atom.py  test_ixdl_mr_async_cp.py  test_ixdl_mr_async_cp_device.py
tools/fly-opt/: CMakeLists.txt  fly-opt.cpp
(+38 files in other folders)
